--- a/src/Components/Pages/SingleService/SingleService.css
+++ b/src/Components/Pages/SingleService/SingleService.css
@@ -3,3 +3,18 @@
    
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
+.single-service{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+}
+.service-text{
+    width: 500px;
+    text-align:justify;
+}
+.single-service img{
+    width: 800px;
+
+}
